--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bip39": "^3.0.2",
     "bitcoinjs-lib": "^5.1.3",
     "ejs": "^2.6.2",
+    "ethereumjs-tx": "^2.1.0",
     "ethereumjs-util": "^6.1.0",
     "ethereumjs-wallet": "^0.6.3",
     "koa-body": "^4.1.0",
